First pass at making assessments connect to tasks.

--- a/app/views/assessments/_form.html.erb
+++ b/app/views/assessments/_form.html.erb
@@ -2,14 +2,16 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.association :section %>
+    <%= f.association :tasks %>
     <%= f.input :assigned_date %>
     <%= f.input :due_date %>
     <%= f.input :value %>
-    <%= f.input :weight %>
-    <%= f.input :autoscore %>
+
+    <%#= f.input :weight %>
+    <%#= f.input :autoscore %>
     <%= f.input :title %>
-    <%= f.input :category %>
-    <%= f.association :section %>
+    <%#= f.input :category %>
   </div>
 
   <div class="form-actions">
