--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,12 +9,13 @@
       <% end %>
       <% if user_signed_in? && (current_user.teacher? || current_user.admin?) %>
         <%= navbar_dropdown 'Admin' do %>
-        <%= navbar_item 'Objectives', objectives_path %>
-        <%= navbar_item 'Courses', courses_path %>
-        <%= navbar_item 'Units', units_path %>
-        <%= navbar_item 'Tasks', tasks_path %>
-        <%= navbar_item 'Sections', sections_path %>
-      <% end %>
+          <%= navbar_item 'Objectives', objectives_path %>
+          <%= navbar_item 'Courses', courses_path %>
+          <%= navbar_item 'Units', units_path %>
+          <%= navbar_item 'Tasks', tasks_path %>
+          <%= navbar_item 'Sections', sections_path %>
+          <%= navbar_item 'Assessments', assessments_path %>
+        <% end %>
       <% end %>
     <% end %>
     <%= navbar_group align: 'right' do %>
