--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,7 +11,16 @@
       </div>
       <div class="col-sm-5">
         <%= f.input :published, inline_label: 'Publish' %>
-        <%= f.association :assessment %>
+        <%# TODO: select assessments for user's section. %>
+        <%# binding.pry %>
+        <% # TODO: might be more than one enrollment. %>
+        <% enrollment = Enrollment.where(student_id: current_user.id)[0] %>
+        <% if enrollment then section = enrollment.section_id %>
+          <%= f.association :assessment,
+            collection: Assessment.where(section_id: section) %>
+        <% else %>
+          <h3>You don't appear to be enrolled in a class!!</h3>
+        <% end %>
         <div class="list-group images">
           <%= f.simple_fields_for :images do |image_form| %>
               <%= render 'image_fields', f: image_form %>
