Add User menu and remove Assessments table.

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,6 +9,7 @@
       <% end %>
       <% if user_signed_in? && (current_user.teacher? || current_user.admin?) %>
         <%= navbar_dropdown 'Admin' do %>
+          <%= navbar_item 'Users', users_path %>
           <%= navbar_item 'Objectives', objectives_path %>
           <%= navbar_item 'Courses', courses_path %>
           <%= navbar_item 'Units', units_path %>
