--- a/app/views/assessments/index.html.erb
+++ b/app/views/assessments/index.html.erb
@@ -33,7 +33,7 @@
   end
 end -%>
 
-<table>
+<!--table>
   <thead>
     <tr>
       <th>Assigned date</th>
@@ -65,8 +65,6 @@ end -%>
       </tr>
     <% end %>
   </tbody>
-</table>
-
-<br>
+</table-->
 
 <%= link_to 'New Assessment', new_assessment_path %>
