Process Markdown in users#show.

--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -19,7 +19,7 @@
       link_to c.title, c
     end
     g.column name: 'Description' do  |c|
-      c.body
+      markdown truncate c.body.squish, :length => 200, :separator => ' '
     end
     g.column name: 'Estimated Time' do  |c|
       c.time_required
