--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <%# TODO: implement real & effective UID so you can switch back. %>
-<footer class='footer navbar navbar-default navbar-fixed-bottom'>
+<footer class='footer'>
   <% if user_signed_in? %>
     <div class='container'>
       <% if Rails.env.test? %>
