--- a/app/views/assessments/index.html.erb
+++ b/app/views/assessments/index.html.erb
@@ -6,7 +6,7 @@
 
 <%= grid(@assessments_grid) do |g|
   g.column name: 'Section' do  |c|
-    # if c.section.name then c.section.name end
+    c.section.name end
   end
 
   g.column name: 'Task' do |c|
