--- a/app/views/home_student/show.html.erb
+++ b/app/views/home_student/show.html.erb
@@ -8,12 +8,15 @@
     margin-left: 1em;
   }
   li.student-status {
-    color: red;
     list-style: square;
   }
   span.student-status {
     color: black;
   }
+  .red { color: red; }
+  .green { color: green; }
+  .orange { color: orange; }
+  .blue { color: blue; }
 </style>
 <div id='main'>
   <h1><%= @user.name %></h1>
@@ -26,7 +29,7 @@
   <%#= @assessments.inspect %>
   <ul>
     <% @assessments.each do |a| %>
-      <li class='student-status'><span class='student-status'>
+      <li class='student-status <%= annunciator(a) %>'><span class='student-status'>
         <%= link_to a.title, task_path(a.tasks[0]) %><br>
         <%# binding.pry %>
         Due: <%= a.due_date.to_date.to_s(:long) %>
