--- a/app/views/home_student/show.html.erb
+++ b/app/views/home_student/show.html.erb
@@ -30,6 +30,7 @@
   <ul>
     <% @assessments.each do |a| %>
       <li class='student-status <%= annunciator(a) %>'><span class='student-status'>
+        <%# TODO: consider using the Font Awesome 4.5.1 fa-square  as the marker %>
         <%= link_to a.title, task_path(a.tasks[0]) %><br>
         <%# binding.pry %>
         Due: <%= a.due_date.to_date.to_s(:long) %>
