Shorted dates, add post count.

--- a/app/views/assessments/index.html.erb
+++ b/app/views/assessments/index.html.erb
@@ -14,11 +14,15 @@
   end
 
   g.column name: 'Assigned' do |c|
-    c.assigned_date
+    c.assigned_date.to_date
   end
 
   g.column name: 'Due' do |c|
-    c.due_date
+    c.due_date.to_date
+  end
+
+  g.column name: '#' do |c|
+    Post.where(assessment_id: c.id).count
   end
 
   g.column name: '' do |c|
