--- a/app/views/assessments/show.html.erb
+++ b/app/views/assessments/show.html.erb
@@ -40,5 +40,10 @@
   <%= @assessment.section %>
 </p>
 
+<p>
+  <strong>Illuminate Name:</strong>
+  <%= illuminate_assessment_name(@assessment) %>
+</p>
+
 <%= link_to 'Edit', edit_assessment_path(@assessment) %> |
 <%= link_to 'Back', assessments_path %>
