Functions for generating Illuminate assignments.

--- a/app/views/assessments/show.html.erb
+++ b/app/views/assessments/show.html.erb
@@ -45,5 +45,7 @@
   <%= illuminate_assessment_name(@assessment) %>
 </p>
 
+<p><%= illuminate_assessment_description(@assessment) %></p>
+
 <%= link_to 'Edit', edit_assessment_path(@assessment) %> |
 <%= link_to 'Back', assessments_path %>
