Fix activity annunciator.

--- a/app/views/users/_index_teacher.html.erb
+++ b/app/views/users/_index_teacher.html.erb
@@ -1,5 +1,3 @@
-<h1>All Blogs</h1>
-
 <%= grid(@users_grid) do |grid|
   grid.column name: "Name" do  |user|
     link_to user.name, home_student_show_path + '/' + user.id.to_s
@@ -14,21 +12,7 @@
   end
   grid.column name: "Last Active" do  |user|
     if user.last_active_time
-      # idle_time = ((Time.current - user.last_active_time) / 1.minute).round
-      # status = case
-      #   when idle_time < 1
-      #     'success'
-      #
-      #   when idle_time < 5
-      #     'success'
-      #
-      #   when idle_time < 15
-      #     'warning'
-      #
-      #   else
-      #     'danger'
-      # end
-      status = user.active_today?
+      status = user.active_today? ? 'success' : 'danger'
       [time_ago_in_words(user.last_active_time) + ' ago', {class: status}]
     else
       ["Never", {class: 'danger'}]
