--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,12 +15,14 @@
  * directory. It is generally better to create a new file per style scope.
  */
 
-@import "posts";
-@import "users";
 @import "comments";
 @import "courses";
+@import "home_student";
 @import "objectives";
 @import "pages";
+@import "posts";
+@import "tasks";
+@import "users";
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
