--- a/app/assets/stylesheets/home_student.scss
+++ b/app/assets/stylesheets/home_student.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the HomeStudent controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+  #student-status-main {
+    float: left;
+    width: 70%;
+  }
+  #student-status {
+    float: right;
+    margin-left: 1em;
+  }
+  li.student-status {
+    list-style: square;
+  }
+  span.student-status {
+    color: black;
+  }
+  .red { color: red; }
+  .green { color: green; }
+  .orange { color: orange; }
+  .blue { color: blue; }
