--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -10,5 +10,5 @@
     <%= link_to 'Delete', [@user, @task], method: :delete,
       data: { confirm: 'Are you sure?' } %> |
   <% end %>
-  <%= link_to 'Back', tasks_path %>
+  <%= link_to 'Back', :back %>
 </div>
