--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -3,10 +3,14 @@
 
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.input :body %>
-    <%= f.input :category %>
+    <%= f.input :body, input_html: {rows: 20} %>
+    <%#= f.input :category %>
     <%= f.input :time_required %>
-    <%= f.association :strands, include_blank: true, label_method: :label %>
+    <%= f.association :strands,
+                      label_method: :label,
+                      collection: Strand.order(label: :asc),
+                      include_blank: "-- Select objective strands --"
+      %>
   </div>
 
   <div class="form-actions">
