--- a/app/views/home_student/show.html.erb
+++ b/app/views/home_student/show.html.erb
@@ -9,7 +9,7 @@
   <div id='student-status'>
     <h2><%= Course.find(@user.sections[0].course_id).title %></h2>
     <ul>
-      <% @assessments.each do |a| %>
+      <% @assessments.order(due_date: :desc).each do |a| %>
         <li class='student-status <%= annunciator(a) %>'><span class='student-status'>
           <%= link_to a.title, task_path(a.tasks[0]) %><br>
           Due: <%= a.due_date.to_date.to_s(:long) %>
