--- a/app/views/rubrics/_form.html.erb
+++ b/app/views/rubrics/_form.html.erb
@@ -2,12 +2,13 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <% binding.pry %>
     <%= f.input :level, as: :radio_buttons,
                 item_wrapper_class: :inline,
                 collection: Rubric.levels.keys,
                 selected: :corroborated %>
     <%= f.association :strand,
-                      include_blank: '--- Select Objective Strand ---'%>
+                      include_blank: '--- Select Objective Strand ---' %>
     <%= f.input :band, as: :radio_buttons,
                 collection: [ '0', '1-2', '3-4', '5-6', '7-8' ]%>
     <%= f.input :criterion %>
