--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,13 @@
 <div class='task-container'>
   <%= render 'display_task' %>
+  <div class='objectives-container'>
+    <h4>Strands</h4>
+    <%= render 'objectives/strands_index' %>
+  </div>
+  <div class='rubric-container'>
+    <h4>Rubric</h4>
+    <%= render 'rubrics/index' %>
+  </div>
 </div>
 
 <div class='clear task-show-edit-links'>
