Checkpoint - work on displaying a set of rubrics.

--- a/app/views/rubrics/_index.html.erb
+++ b/app/views/rubrics/_index.html.erb
@@ -1,9 +1,12 @@
 <%= grid(@rubrics_grid) do |g|
-  g.column name: 'Level' do |t|
-    t.level
+  # if current_user.teacher? || current_user.admin?
+  if false == true
+    g.column name: 'Level' do |t|
+      t.level
+    end
   end
   g.column name: 'Strand' do |t|
-    t.strand
+    t.strand.to_s(:short)
   end
   g.column name: 'Band' do |t|
     t.band
@@ -11,15 +14,17 @@
   g.column name: 'Criterion' do |t|
     markdown t.criterion
   end
-  g.column name: '' do |t|
-    link_to 'Edit', edit_rubric_path(t)
-  end
-  g.column name: '' do |t|
-    # To create a new rubric item using this one as the defaults
-    link_to 'New', new_rubric_path(:base_rubric_id => t.id)
-  end
-  g.column name: '' do |t|
-    link_to 'Delete', t, method: :delete,
-             data: { confirm: 'Are you sure?' }
+  if false == true
+    g.column name: '' do |t|
+      link_to 'Edit', edit_rubric_path(t)
+    end
+    g.column name: '' do |t|
+      # To create a new rubric item using this one as the defaults
+      link_to 'New', new_rubric_path(:base_rubric_id => t.id)
+    end
+    g.column name: '' do |t|
+      link_to 'Delete', t, method: :delete,
+               data: { confirm: 'Are you sure?' }
+    end
   end
 end -%>
