--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -10,5 +10,6 @@
     <%= link_to 'Delete', [@user, @task], method: :delete,
       data: { confirm: 'Are you sure?' } %> |
   <% end %>
+  <%= link_to 'Get Started', new_user_post_path(user_id: current_user.id) %> |
   <%= link_to 'Back', :back %>
 </div>
