--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -10,6 +10,18 @@
     <%= link_to 'Delete', [@user, @task], method: :delete,
       data: { confirm: 'Are you sure?' } %> |
   <% end %>
-  <%= link_to 'Get Started', new_user_post_path(user_id: current_user.id) %> |
+  <% if current_user.student? %>
+    <% post = Post.where(user_id: current_user.id, assessment_id: params[:id]) %>
+    <% if post.exists? %>
+      <%# TODO: deal with multiples – provide select list. %>
+      <%= link_to 'Revise Post', edit_user_post(current_user.id, post.id) %>
+    <% else %>
+      <%# binding.pry %>
+      <%= link_to 'Get Started', new_user_post_path(
+                                  user_id: current_user.id #,
+                                  #{ task_id: params[:id] }
+                                ) %>
+    <% end %> |
+  <% end %>
   <%= link_to 'Back', :back %>
 </div>
