--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -17,10 +17,7 @@
       <%= link_to 'Revise Post', edit_user_post(current_user.id, post.id) %>
     <% else %>
       <%# binding.pry %>
-      <%= link_to 'Get Started', new_user_post_path(
-                                  user_id: current_user.id #,
-                                  #{ task_id: params[:id] }
-                                ) %>
+      <%= link_to 'Get Started', new_user_post_path( user_id: current_user.id ) %>
     <% end %> |
   <% end %>
   <%= link_to 'Back', :back %>
