--- a/app/views/home_student/show.html.erb
+++ b/app/views/home_student/show.html.erb
@@ -11,7 +11,7 @@
     <ul>
       <% @assessments.order(due_date: :desc).each do |a| %>
         <li class='student-status <%= annunciator(a) %>'><span class='student-status'>
-          <%= link_to a.title, task_path(a.tasks[0]) %><br>
+          <%= link_to a.title, task_path(a.tasks[0], assessment_id: a.id) %><br>
           Due: <%= a.due_date.to_date.to_s(:long) %>
         <span></li>
       <% end %>
