--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -18,6 +18,11 @@
   width: 310px;
 }
 
+.post-instructions {
+  background-color: #F9F9F9;
+  padding: 0.5em;
+}
+
 // Used by post#index
 
 .post-index {
