Add button to hide/show Footnotes.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,3 +74,11 @@ footer {
   height: 60px;
   background-color: #f5f5f5;
 }
+
+#footer-become {
+  float: left;
+}
+
+#footnote-button {
+  float: right;
+}
