--- a/app/views/objectives/_strands_index.html.erb
+++ b/app/views/objectives/_strands_index.html.erb
@@ -5,4 +5,9 @@
   g.column name: 'Description' do  |t|
     markdown t.description
   end
+  if policy(Objective).edit?
+    g.column name: '' do |t|
+      link_to 'Edit', edit_objective_path(t.objective_id)
+    end
+  end
 end -%>
