--- a/app/views/rubrics/edit.html.erb
+++ b/app/views/rubrics/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', rubric: @rubric %>
 
 <%= link_to 'Show', @rubric %> |
-<%= link_to 'Back', rubrics_path %>
+<%= link_to 'Back', :back %>
