--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,6 @@
+<%
+ # app/views/tasks/show.html.erb
+ %>
 <div class='task-container'>
   <%= render 'display_task' %>
   <% if current_user.teacher? %>
@@ -22,14 +25,16 @@
   <% end %>
   <% if current_user.student? %>
     <% post = Post.where(user_id: current_user.id, assessment_id: params[:assessment_id]) %>
-    <% if post.count == 2 %>
-      <%= link_to 'Revise Post', edit_user_post_path(current_user.id, post.ids[0]) %>
-    <% elsif post.count > 0 %>
+    <% if post.count == 0 %>
+      <%= link_to 'Get Started',
+        new_user_post_path(user_id: current_user.id,
+                           assessment_id: params[:assessment_id]) %>
+    <% elsif post.count == 1 %>
+      <%= link_to 'Revise Post',
+        edit_user_post_path(current_user.id, post.ids[0]) %>
+    <% else %>
       <%# TODO: deal with multiples – provide select list. %>
       <%= link_to 'More than one post – Return to list', '/' %>
-    <% else %>
-      <%= link_to 'Get Started', new_user_post_path(user_id: current_user.id,
-                                                    assessment_id: params[:assessment_id]) %>
     <% end %> |
   <% end %>
   <%= link_to 'Back', :back %>
