--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -86,9 +86,19 @@ h2.post-index-item-body-title {
 
 // Used by post#show
 
+.post {
+  float: left;
+  width: 60%;
+}
+
+.post-rubric {
+  float: left;
+  width: 30%;
+}
+
 .post-images {
   float: left;
-  width: 25%;
+  width: 50%;
   margin-right: 10px;
 }
 
