Display rubric in sidebar of posts#show.

--- a/app/views/rubrics/_index.html.erb
+++ b/app/views/rubrics/_index.html.erb
@@ -1,3 +1,12 @@
+<%
+ # app/views/rubrics/_index.html.erb - General purpose Rubric listing.
+ #
+ # Expects:
+ # - @rubrics - array of Rubric
+ # - @rubrics_grid - result of Wice Grid initialize_grid @rubrics
+ %>
+<% params.inspect %>
+
 <%= grid(@rubrics_grid) do |g|
   # if current_user.teacher? || current_user.admin?
   if false == true
@@ -14,21 +23,23 @@
   g.column name: 'Criterion' do |t|
     markdown t.criterion
   end
-  if policy(Rubric).edit?
-    g.column name: '' do |t|
-      link_to 'Edit', edit_rubric_path(t)
+  unless params[:controller] == 'posts'
+    if policy(Rubric).edit?
+      g.column name: '' do |t|
+        link_to 'Edit', edit_rubric_path(t)
+      end
     end
-  end
-  if policy(Rubric).create?
-    g.column name: '' do |t|
-      # To create a new rubric item using this one as the defaults
-      link_to 'Clone', new_rubric_path(:base_rubric_id => t.id)
+    if policy(Rubric).create?
+      g.column name: '' do |t|
+        # To create a new rubric item using this one as the defaults
+        link_to 'Clone', new_rubric_path(:base_rubric_id => t.id)
+      end
     end
-  end
-  if policy(Rubric).destroy?
-    g.column name: '' do |t|
-      link_to 'Delete', t, method: :delete,
-               data: { confirm: 'Are you sure?' }
+    if policy(Rubric).destroy?
+      g.column name: '' do |t|
+        link_to 'Delete', t, method: :delete,
+                 data: { confirm: 'Are you sure?' }
+      end
     end
   end
 end -%>
