--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,9 @@
+<%
+ # app/views/posts/show.html.erb
+ %>
+
 <div class='post'>
+
   <div class='post-header'>
     <h1><%= @post.title %></h1>
     <p>
@@ -13,6 +18,7 @@
       <% end %>
     </p>
   </div>
+
   <div class='post-images'>
     <% @post.images.each do |image| %>
       <figure>
@@ -34,6 +40,7 @@
       <%= markdown @post.body %>
     </p>
   </div>
+
   <div class='post-links'>
     <hr>
     <%= link_to 'Edit', [:edit, @user, @post] %> |
@@ -47,4 +54,11 @@
   <div class='post-new-comment'>
     <%= render 'new_comment' %>
   </div>
+
+</div>
+
+<div class='post-sidebar'>
+  <% if current_user.teacher? || current_user.admin? %>
+    <%= render 'rubrics/index' %>
+  <% end %>
 </div>
