--- a/app/views/rubrics/_index.html.erb
+++ b/app/views/rubrics/_index.html.erb
@@ -7,39 +7,54 @@
  %>
 <% params.inspect %>
 
-<%= grid(@rubrics_grid) do |g|
+<%=
+last_strand = nil
+grid(@rubrics_grid) do |g|
+  g.action_column html_check_box: false, select_all_buttons: false
+
+  g.before_row do |t, number_of_columns|
+    if t.strand.to_s(:short) != last_strand
+      last_strand = t.strand.to_s(:short)
+      content_tag(:tr,
+        content_tag(:td, t.strand.to_s(:full), colspan: number_of_columns)
+      )
+    end
+  end
+
   # if current_user.teacher? || current_user.admin?
   if false == true
     g.column name: 'Level' do |t|
       t.level
     end
+
+    g.column name: 'Strand' do |t|
+      t.strand.to_s(:short)
+    end
   end
-  g.column name: 'Strand' do |t|
-    t.strand.to_s(:short)
-  end
-  g.column name: 'Band' do |t|
+  g.column do |t|
     t.band
   end
-  g.column name: 'Criterion' do |t|
+  g.column do |t|
     markdown t.criterion
   end
   unless params[:controller] == 'posts'
     if policy(Rubric).edit?
-      g.column name: '' do |t|
+      g.column do |t|
         link_to 'Edit', edit_rubric_path(t)
       end
     end
     if policy(Rubric).create?
-      g.column name: '' do |t|
+      g.column do |t|
         # To create a new rubric item using this one as the defaults
         link_to 'Clone', new_rubric_path(:base_rubric_id => t.id)
       end
     end
     if policy(Rubric).destroy?
-      g.column name: '' do |t|
+      g.column do |t|
         link_to 'Delete', t, method: :delete,
                  data: { confirm: 'Are you sure?' }
       end
     end
   end
-end -%>
+end
+-%>
