--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <%# TODO: implement real & effective UID so you can switch back. %>
 <footer class='footer'>
-  <% if user_signed_in? %>
+  <% if user_signed_in? || Rails.env.development? %>
     <div class='container'>
       <div id='footer-become'>
         <% if policy(User).become? %>
