--- a/app/views/layouts/_su.html.erb
+++ b/app/views/layouts/_su.html.erb
@@ -1,7 +1,8 @@
 <%= simple_form_for(
     :user,
-    url: { action: 'become', controller: 'users' },
-    html: { :class => 'form-inline' }
+    url: become_users_path,
+    html: { :class => 'form-inline' },
+    method: :post
   ) do |f| %>
     <%= f.button :submit, 'Become user' %>
     <%= f.input :id, label: false, collection: User.all.order(name: :asc) %>
