--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,6 +15,7 @@
           <%= navbar_item 'Courses', courses_path %>
           <%= navbar_item 'Objectives', objectives_path %>
           <%= navbar_item 'Rubrics', rubrics_path %>
+          <%= navbar_item 'Scores', scores_path %>
           <%= navbar_item 'Sections', sections_path %>
           <%= navbar_item 'Tasks', tasks_path %>
           <%= navbar_item 'Units', units_path %>
