--- a/app/views/rubrics/_index.html.erb
+++ b/app/views/rubrics/_index.html.erb
@@ -10,11 +10,15 @@
 <%=
 last_strand = nil
 grid(@rubrics_grid) do |g|
+
   g.before_row do |t, number_of_columns|
     if t.strand.to_s(:short) != last_strand
       last_strand = t.strand.to_s(:short)
       content_tag(:tr,
-        content_tag(:td, t.strand.to_s(:full), colspan: number_of_columns)
+        content_tag(:td,
+                    t.strand.to_s(:full),
+                    colspan: number_of_columns
+        )
       )
     end
   end
@@ -57,9 +61,9 @@ grid(@rubrics_grid) do |g|
 end
 -%>
 
-<% @post.assessment&.strands&.each do |strand| %>
+<% @post&.assessment&.strands&.each do |strand| %>
   <%= render 'scores/mini_form', strand: strand,
-                                 student: @post.author,
-                                assessment: @post.assessment 
+                                 student: @post.user,
+                                assessment: @post.assessment
   %>
 <% end %>
