--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -93,7 +93,19 @@ h2.post-index-item-body-title {
 
 .post-rubric {
   float: left;
+  width: 100%;
+  margin-top: 10px;
+  font-size: smaller;
+}
+
+.post-sidebar {
+  float: left;
   width: 30%;
+  margin-left: 10px;
+}
+
+.post-sidebar .wice-grid-title-row {
+  display: none;
 }
 
 .post-images {
