--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -23,14 +23,19 @@
     <%= link_to 'Delete', [@user, @task], method: :delete,
       data: { confirm: 'Are you sure?' } %> |
   <% end %>
-  <% if current_user.student? %>
+  <% unless current_user.teacher? || current_user.admin? %>
     <% post = Post.where(user_id: current_user.id, assessment_id: params[:assessment_id]) %>
     <% if post.count == 0 %>
       <%= link_to 'Get Started',
         new_user_post_path(user_id: current_user.id,
                            assessment_id: params[:assessment_id]) %>
     <% elsif post.count == 1 %>
-      <%= link_to 'Revise Post',
+      <% if post.published == true %>
+        <% link_text = 'Revise Post' %>
+      <% else %>
+        <% link_text = 'Finish & Publish' %>
+      <% end %>
+      <%= link_to link_text,
         edit_user_post_path(current_user.id, post.ids[0]) %>
     <% else %>
       <%# TODO: deal with multiples – provide select list. %>
