Setting up home_teacher.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import "comments";
 @import "courses";
 @import "home_student";
+@import "home_teacher";
 @import "objectives";
 @import "pages";
 @import "posts";
