--- a/app/views/home_teacher/index.html.erb
+++ b/app/views/home_teacher/index.html.erb
@@ -1,12 +1,16 @@
 <%
  # app/views/home_teacher/index.html.erb
  %>
+<div class='home-teacher'>
+<% @periods.each do |p| %>
 
-<%#= params.inspect %>
+  <div class='class-title'>
+    <a href=#<%= "S#{p[:session]}P#{p[:period]}" %> data-toggle='collapse'>
+      <%= "S#{p[:session]}P#{p[:period]}: #{p[:courses].map do |c| c[:title] end.join ' & '}" %>
+    </a>
+  </div>
 
-<ul>
-  <% @periods.each do |p| %>
-    <li><%= "S#{p[:session]}P#{p[:period]}: #{p[:courses].map do |c| c[:title] end.join ' & '}" %></li>
+  <div id=<%= "S#{p[:session]}P#{p[:period]}" %> class='collapse'>
     <ul>
       <% p[:courses].each do |c| %>
         <li><%= "#{c[:title]}" %></li>
@@ -16,7 +20,7 @@
                 <tr>
                   <td><%= link_to s[:name], "/home_student/show/#{s[:id]}" %></td>
                   <td><%= last_seen(s[:id]) %></td>
-                  <td><%=  %></td>
+                  <td><%# TODO: display overall objective scores. %></td>
                   <td><%= assessment_overview(s[:id], c[:assessments]) %></td>
                 </tr>
               <% end %>
@@ -24,5 +28,7 @@
           </table>
       <% end %>
     </ul>
-  <% end %>
-</ul>
+  </div>
+
+<% end %>
+</div>
