--- a/app/views/home_teacher/index.html.erb
+++ b/app/views/home_teacher/index.html.erb
@@ -19,7 +19,10 @@
               <% c[:students].each do |s| %>
                 <tr>
                   <td><%= link_to s[:name], "/home_student/show/#{s[:id]}" %></td>
-                  <td><%= last_seen(s[:id]) %></td>
+                  <td>
+                    <%= last_seen(s[:id]) %>
+                    <%= unclassified_posts(s[:id]) %>
+                  </td>
                   <td><%# TODO: display overall objective scores. %></td>
                   <td><%= assessment_overview(s[:id], c[:assessments]) %></td>
                 </tr>
