--- a/app/views/home_teacher/index.html.erb
+++ b/app/views/home_teacher/index.html.erb
@@ -1,5 +1,8 @@
+<%
+ # app/views/home_teacher/index.html.erb
+ %>
 
-<div class="tabbable"> <!-- Only required for left/right tabs -->
+<div class="tabbable">
   <ul class="nav nav-tabs">
     <li class="active"><a href="#tab1" data-toggle="tab">Overview</a></li>
     <li><a href="#tab2" data-toggle="tab">Assessments</a></li>
@@ -8,16 +11,16 @@
   </ul>
   <div class="tab-content">
     <div id="tab1" class="tab-pane active">
-      <%= render 'overview' %>
+      <%= render 'overview_tab' %>
     </div>
     <div id="tab2" class="tab-pane">
-      <%= render 'assessment_view' %>
+      <%= render 'assessment_tab' %>
     </div>
     <div id="tab3" class="tab-pane">
-      <%= render 'unit_view' %>
+      <%= render 'unit_tab' %>
     </div>
     <div id="tab4" class="tab-pane">
-      <%= render 'unit_view' %>
+      <%= render 'resources_tab' %>
     </div>
   </div>
 </div>
